--- a/.github/workflows/update-manufacturer-file.yml
+++ b/.github/workflows/update-manufacturer-file.yml
@@ -1,9 +1,9 @@
 name: Update manufacturer file
 
 on:
- schedule:
-  - cron: '0 */12 * * *' 
- workflow_dispatch: 
+  schedule:
+    - cron: '0 */12 * * *'
+  workflow_dispatch: 
 
 jobs:
   update_manufacturer_file:
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          - python-version: "3.11"
+          - python-version: '3.11'
       - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
