--- a/.github/workflows/update-manufacturer-file.yml
+++ b/.github/workflows/update-manufacturer-file.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          - python-version: '3.11'
+          python-version: '3.11'
       - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
