--- a/.github/workflows/update-manufacturer-file.yml
+++ b/.github/workflows/update-manufacturer-file.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Update manufacturer file
         if: steps.verify_diff.outputs.changed == 'true'
         run: |
-          git config --global user.name 'Krypton'
-          git config --global user.email 'root@krypton.ninja'
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git commit -am "manuf: Update of `date +'%Y-%m-%d %H:%M:%S'`"
           git push
