ci: Push on main branch only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,8 @@ name: gomanuf CI (Test)
 
 on:
   push:
-  pull_request:
+    branches:
+      - main
   workflow_run:
     workflows: ["Update manufacturer file"]
     types: [completed]
