--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ env.VERSION }}
+          tag_name: v1.${{ env.VERSION }}
           name: Version ${{ env.VERSION }}
           body: "## ${{ env.RELEASE_DATE }} Update"
           draft: false
