ci: Update monthly-release.yml

--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -11,15 +11,15 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-      - name: Set Version Variables
-        run: echo "VERSION=$(date +'%-Y.%-m.%-d')" >> $GITHUB_ENV
+      - name: Set Date Tag Variable
+        run: echo "DATE_TAG=$(date +'%-Y%-m%-d')" >> $GITHUB_ENV
       - name: Set Release Date
         run: echo "RELEASE_DATE=$(date +'%-B %-Y')" >> $GITHUB_ENV
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v1.${{ env.VERSION }}
-          name: Version ${{ env.VERSION }}
+          tag_name: v2.0.0+${{ env.DATE_TAG }}
+          name: Version v2.0.0+${{ env.DATE_TAG }}
           body: "## ${{ env.RELEASE_DATE }} Update"
           draft: false
           prerelease: false
