--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+      - name: Download manuf.txt
+        run: wget https://raw.githubusercontent.com/kkrypt0nn/manuf/refs/heads/main/manuf.txt -O manuf.txt
       - name: Set Date Tag Variable
         run: echo "DATE_TAG=$(date +'%Y%m%d')" >> $GITHUB_ENV
       - name: Set Release Date
@@ -25,7 +27,8 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add README.md
-          git commit -am "chore: Bump version to $VERSION"
+          git add manuf.txt
+          git commit -am "chore: Bump version to $VERSION and update manuf.txt"
           git push
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
